@@ -1,3 +1,3 @@
 library(knitr)
-rm(list=ls())
+rm(list = ls())
 knit2html("readme.rmd")
